package org.example.Empresa;

public class Disenyador extends Empleado{

    public Disenyador(){

    }

    @Override
    public void realizarTarea() {
        System.out.println("Creando diseños gráficos y prototipos.");
    }
}
